Spring Boot 카테고리 23편 딥다이브 고도화 + 애니메이션 SVG
소스 레벨(클래스/메서드)·설계 의도·프로덕션 함정·디버깅·면접 질문·
글 간 교차 링크로 전면 재작성. 글마다 인라인 SVG+CSS keyframe 애니메이션
(키 0·JS 0·다크모드 대응) + mermaid 추가. 본문 4~5KB → 12~17KB.

- 자동구성/IoC/DI/@SpringBootApplication/외부설정/starter
- @Transactional/예외처리/MVC·WebFlux/Data JPA/Validation/가상스레드
- Boot4·FW7/선언적 HTTP/API버저닝/관측성/GraalVM/Actuator/테스트슬라이스/Security/캐시
- Redis 클러스터/Kafka/Elasticsearch